--- a/bsky/safari/firmament.paperback.user.css
+++ b/bsky/safari/firmament.paperback.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Firmament
 @namespace      https://bsky.app/profile/haraiva.bsky.app
-@version        0.3.3
+@version        0.3.4
 @description    a customisable theme for Bluesky Social by @haraiva.bsky.social based on @fenny.zone's "Better Bluesky" userstyle.
 @updateURL      https://github.com/haraiva/userstyles/raw/main/bsky/safari/firmament.paperback.user.css
 @license        MIT
@@ -168,6 +168,10 @@
         [style*="color: rgb(108, 132, 157)"],
         [style*="color: rgb(120, 142, 165)"], 
         [style*="color: rgb(91, 119, 149)"] {
+            color: var(--tweak-fg-translucent) !important;
+        }
+
+        [style*="color: rgb(147, 165, 183)"] {
             color: var(--tweak-fg-translucent) !important;
         }
         
